Mon Feb  4 16:44:24 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (darwin): NSIG is not defined if _XOPEN_SOURCE > 500L.
	  [ruby-dev:33584]

Mon Feb  4 14:51:19 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_enc_symname2_p): support "!", "!=" and "!~".
	  [ruby-dev:33592]

Mon Feb  4 13:58:42 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/delegate.rb (Delegator.preserved, DelegateClass.methods): extend
	  shouldn't be delegated. [ruby-dev:32987], etc.

Mon Feb  4 08:59:31 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/cgi.rb (CGI::QueryExtension::[]): no more transition
	  extend(CGI::Value).  a patch from <tommy AT tmtm.org> in
	  [ruby-dev:33583].

Sun Feb 03 21:13:13 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_numeric.rb: forgot to add this (at r15360).
	* test/ruby/test_file_exhaustive.rb: add tests to achive over 80% test
	  coverage of file.c.

Sat Feb  2 20:06:42 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/benchmark.rb (Benchmark::realtime): make Benchmark#realtime
	  a bit faster.  a patch from Alexander Dymo <dymo@ukrpost.ua> in
	  [ruby-core:15337].

Sat Feb  2 17:40:21 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* time.c (time_cmp): Time.<=> no longer supports comparison with
	  numeric. [ruby-core#15332]

Sat Feb  2 09:53:39 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (darwin): disabled fat-binary support which confuses
	  configure much, since ``universal'' implies hidden cross-compiling.
	  TODO: ruby and libruby.bundle might be possible to bound with `lipo'
	  after builds for each archs.  Anyway, config.h and rbconfig.rb must
	  be separated definitely at least.

Sat Feb  2 09:28:36 2008  Tanaka Akira  <akr@fsij.org>

	* random.c (limited_big_rand): fix buffer overflow when SIZEOF_BDIGITS
	  is 2.  fixed by Kenta Murata.  [ruby-dev:33565]

Fri Feb  1 21:42:37 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
