@@ -1,3 +1,8 @@
+Mon Feb  4 21:52:06 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/delegate.rb (DelegateClass): use define_method instead of
+	  module_eval to improve performance.  [ruby-dev:33586]
+
 Mon Feb  4 16:44:24 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (darwin): NSIG is not defined if _XOPEN_SOURCE > 500L.
